Fix (most) dialog issues on mobile

--- a/src/components/general/Dropdown.module.css
+++ b/src/components/general/Dropdown.module.css
@@ -1,6 +1,7 @@
 .dropdownRoot {
   display: inline-block;
   outline: none;
+  position: relative;
 }
 
 .dropdownContainer {
@@ -40,10 +41,10 @@
 .overlay {
   display: none;
   top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
-  position: absolute;
+  left: 0;
+  position: fixed;
   background: rgba(0, 0, 0, 0.75);
   z-index: 99999;
   pointer-events: none;
