--- a/src/components/general/Popup.module.css
+++ b/src/components/general/Popup.module.css
@@ -34,14 +34,3 @@
 .spacer {
   flex: 1 1 auto;
 }
-
-.close {
-  border: none;
-  width: 24px;
-  text-align: center;
-  border-radius: 4px;
-  display: inline-flex;
-  flex: 0 0 auto;
-  background: var(--bg-page-primary);
-  border: 1px solid var(--border-primary);
-}
